force-app/main/default/objects/Candidate__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Immediately</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>1 week</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>2 weeks</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>1 Month</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>6 weeks</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>2 months</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>10 weeks</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>3 months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>