force-app/main/default/objects/Candidate__c/fields/Communication_Label__c.field-meta.xml
<CustomField>
    <fullName>Communication_Label__c</fullName>
    <formula>IF(TEXT( Communications__c ) == &quot;&quot;, &quot;&quot;, 
TEXT( Communications__c ) + &quot;/10 Communication skills&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communication Skills</label>
    <type>Text</type>
</CustomField>