force-app/main/default/objects/Candidate__c/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <label>Communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1/10</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2/10</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3/10</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4/10</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5/10</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6/10</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7/10</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8/10</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9/10</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10/10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>