force-app/main/default/objects/Candidate__c/fields/Consultancy_Experience__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Experience__c</fullName>
    <inlineHelpText>In years</inlineHelpText>
    <label>Consultancy Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>