force-app/main/default/objects/Candidate__c/fields/Emplyee_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Emplyee_Referral_Type__c</fullName>
    <label>Emplyee Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Endorsed Referral</fullName>
            </value>
            <value>
                <fullName>Candidate Introduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>