force-app/main/default/objects/Candidate__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <label>Salary Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>