force-app/main/default/objects/Candidate__c/fields/Hireflix_URL__c.field-meta.xml
<CustomField>
    <fullName>Hireflix_URL__c</fullName>
    <label>Hireflix URL</label>
    <type>Url</type>
</CustomField>