force-app/main/default/objects/Candidate__c/fields/LinkedIn_Application__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Application__c</fullName>
    <label>LinkedIn Application</label>
    <type>Url</type>
</CustomField>