force-app/main/default/objects/Candidate__c/fields/Lives_In__c.field-meta.xml
<CustomField>
    <fullName>Lives_In__c</fullName>
    <formula>Location__City__s + &apos;, &apos; + TEXT(Location__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lives In</label>
    <type>Text</type>
</CustomField>