force-app/main/default/objects/Candidate__c/fields/New_Employee_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_Employee_Comment__c</fullName>
    <inlineHelpText>Pre-existing holiday etc</inlineHelpText>
    <label>New Employee Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>