force-app/main/default/objects/Candidate__c/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal referral</inlineHelpText>
    <label>Referred by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>