force-app/main/default/objects/Candidate__c/fields/Referred_by_contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>External agent or contact</inlineHelpText>
    <label>Referred by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>