force-app/main/default/objects/Candidate__c/fields/Rejected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Comment__c</fullName>
    <label>Rejected Comment</label>
    <type>TextArea</type>
</CustomField>