force-app/main/default/objects/Candidate__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Other Job</fullName>
            </value>
            <value>
                <fullName>Other Technology</fullName>
            </value>
            <value>
                <fullName>Poor communications</fullName>
            </value>
            <value>
                <fullName>Role no longer available</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Thrive Score Low</fullName>
            </value>
            <value>
                <fullName>Thrive Test Expired</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>