force-app/main/default/objects/Candidate__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Associate Developer</fullName>
            </value>
            <value>
                <fullName>Associate Project Manager</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Delivery Director</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
                <label>Developer (SF)</label>
            </value>
            <value>
                <fullName>Developer (web)</fullName>
            </value>
            <value>
                <fullName>Graduate Business Analyst</fullName>
            </value>
            <value>
                <fullName>Graduate Project Manager</fullName>
            </value>
            <value>
                <fullName>Graduate Software Developer</fullName>
            </value>
            <value>
                <fullName>Lead Business Analyst</fullName>
            </value>
            <value>
                <fullName>Lead Consultant</fullName>
            </value>
            <value>
                <fullName>Lead Consultant (MC)</fullName>
            </value>
            <value>
                <fullName>Lead Developer</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Principal Consultant</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Senior Business Analyst</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Consultant (MC)</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>Senior Project Manager</fullName>
            </value>
            <value>
                <fullName>Technical Consultant</fullName>
            </value>
            <value>
                <fullName>Product Business Analysis</fullName>
            </value>
            <value>
                <fullName>Associate Data Analytics Consultant</fullName>
            </value>
            <value>
                <fullName>Data Analytics Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Data Analytics Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>