force-app/main/default/objects/Candidate__c/fields/Salary_Comment__c.field-meta.xml
<CustomField>
    <fullName>Salary_Comment__c</fullName>
    <label>Salary Comment</label>
    <type>TextArea</type>
</CustomField>