force-app/main/default/objects/Candidate__c/fields/Salesforce_Certs_Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Certs_Verification_URL__c</fullName>
    <label>Salesforce Certs Verification URL</label>
    <type>Url</type>
</CustomField>