force-app/main/default/objects/Candidate__c/fields/Salesforce_Experience__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Experience__c</fullName>
    <inlineHelpText>In years</inlineHelpText>
    <label>Salesforce Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>