force-app/main/default/objects/Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Initial source (very important for agencies!)</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>LDN</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Mason Frank</fullName>
            </value>
            <value>
                <fullName>Method Cloud</fullName>
            </value>
            <value>
                <fullName>PeopleSource</fullName>
                <label>PeopleSource / Experis</label>
            </value>
            <value>
                <fullName>Relovent</fullName>
            </value>
            <value>
                <fullName>Upwork</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Thrive</fullName>
            </value>
            <value>
                <fullName>Salesforce Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn Headhunt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>