force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Video Screen</fullName>
            </value>
            <value>
                <fullName>1st Interview</fullName>
            </value>
            <value>
                <fullName>Psychometric</fullName>
            </value>
            <value>
                <fullName>2nd Interview</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>