force-app/main/default/objects/Candidate__c/fields/Thrive__c.field-meta.xml
<CustomField>
    <fullName>Thrive__c</fullName>
    <label>Thrive</label>
    <type>Url</type>
</CustomField>