force-app/main/default/objects/Candidate__c/fields/Thrive_Score__c.field-meta.xml
<CustomField>
    <fullName>Thrive_Score__c</fullName>
    <label>Thrive Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>