force-app/main/default/objects/Candidate__c/fields/Thrive_Score_Label__c.field-meta.xml
<CustomField>
    <fullName>Thrive_Score_Label__c</fullName>
    <formula>IF(ISBLANK(TEXT(Thrive_Score__c)), &quot;&quot;,
TEXT(Thrive_Score__c) + &quot;/100 Thrive Score&quot;)</formula>
    <label>Thrive Score Label</label>
    <type>Text</type>
</CustomField>