force-app/main/default/objects/Candidate__c/fields/Trailblazer_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_URL__c</fullName>
    <label>Trailblazer URL</label>
    <type>Url</type>
</CustomField>