force-app/main/default/objects/Candidate__c/fields/Video_Screener__c.field-meta.xml
<CustomField>
    <fullName>Video_Screener__c</fullName>
    <label>Video Screener</label>
    <type>Url</type>
</CustomField>