force-app/main/default/objects/Candidate__c/fields/X1st_Interview__c.field-meta.xml
<CustomField>
    <fullName>X1st_Interview__c</fullName>
    <label>1st Interview</label>
    <type>DateTime</type>
</CustomField>