force-app/main/default/objects/Candidate__c/fields/X2nd_Interview__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Interview__c</fullName>
    <label>2nd Interview</label>
    <type>DateTime</type>
</CustomField>