force-app/main/default/objects/Candidate__c/listViews/Graduate_Business_Analysts.listView-meta.xml
<ListView>
    <fullName>Graduate_Business_Analysts</fullName>
    <booleanFilter>3 AND (1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Communication_Label__c</columns>
    <columns>Thrive_Score_Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Graduate Business Analyst,Graduate Project Manager,Graduate Software Developer</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Developer (web),Project Manager</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </filters>
    <label>Graduate BA / Dev / PM</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>