force-app/main/default/objects/Candidate__c/listViews/LinkedIn_Candidates.listView-meta.xml
<ListView>
    <fullName>LinkedIn_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Thrive_Score__c</columns>
    <columns>Availability__c</columns>
    <columns>LinkedIn__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Direct,LinkedIn,Employee Referral</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Accepted</value>
    </filters>
    <label>2024 Candidate Search</label>
</ListView>