force-app/main/default/objects/Candidate__c/listViews/PeopleSource_Accepted_Candidates.listView-meta.xml
<ListView>
    <fullName>PeopleSource_Accepted_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Availability__c</columns>
    <columns>LinkedIn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>PeopleSource</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>PeopleSource Accepted Candidates</label>
    <sharedTo>
        <group>People_Source</group>
    </sharedTo>
</ListView>