force-app/main/default/objects/Candidate__c/listViews/PeopleSource_Archived_Candidates.listView-meta.xml
<ListView>
    <fullName>PeopleSource_Archived_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>Thrive_Score__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Availability__c</columns>
    <columns>LinkedIn__c</columns>
    <columns>Archived__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>PeopleSource</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Video Screen,Psychometric,Shortlisted,Offered</value>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>PeopleSource Archived Candidates</label>
    <sharedTo>
        <group>People_Source</group>
    </sharedTo>
</ListView>