force-app/main/default/objects/Candidate__c/listViews/PeopleSource_Candidates.listView-meta.xml
<ListView>
    <fullName>PeopleSource_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Thrive_Score__c</columns>
    <columns>Availability__c</columns>
    <columns>LinkedIn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>PeopleSource</value>
    </filters>
    <label>PeopleSource Candidates</label>
</ListView>