force-app/main/default/objects/Candidate__c/listViews/PeopleSource_Rejected_Candidates.listView-meta.xml
<ListView>
    <fullName>PeopleSource_Rejected_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Thrive_Score__c</columns>
    <columns>LinkedIn__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Rejected_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>PeopleSource</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>PeopleSource Rejected Candidates</label>
    <sharedTo>
        <group>People_Source</group>
    </sharedTo>
</ListView>