force-app/main/default/objects/Candidate__c/listViews/Thrive_Candidates.listView-meta.xml
<ListView>
    <fullName>Thrive_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Thrive_Score__c</columns>
    <columns>Availability__c</columns>
    <columns>LinkedIn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Thrive</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Video Screen,Psychometric,Interviews,Shortlisted,Offered</value>
    </filters>
    <label>Thrive Candidates</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>